Fixing homepage dark mode

--- a/assets.src/scss/themes/_theme-dark.scss
+++ b/assets.src/scss/themes/_theme-dark.scss
@@ -101,6 +101,11 @@ body.dark-mode {
         }
     }
 
+    .card {
+        background: var(--dark2);
+        color: #fff;
+    }
+
     .dropdown {
         &-menu {
             background: var(--dark2);
